[package]
name = "solver"
version = "0.2.7"
authors = ["Wataru Inariba"]
edition = "2021"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]
path = "../solver-src/lib.rs"

[dependencies]
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
postflop-solver = { git = "https://github.com/b-inary/postflop-solver", features = ["bincode", "custom-alloc"], default-features = false }
wasm-bindgen = "=0.2.92"

[profile.release]
codegen-units = 1
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4"]
